colored body background & created card container & few style variables -width -padding -border-radius colors

--- a/src/sass/components/_variables.scss
+++ b/src/sass/components/_variables.scss
@@ -1,2 +1,46 @@
-$primary: rgb(45, 45, 221);
+
 $font-size: 18px;
+
+// Padding pxs
+$p-5: 5px;
+$p-7: 7px;
+$p-10: 10px;
+$p-15: 15px;
+
+// Widths
+$w-25: 25%;
+$w-50: 50%;  
+$w-75: 75%;  
+$w-100: 100%;
+// Even Widths //
+$w-10: 10%;
+$w-20: 20%;
+$w-30: 30%;
+$w-40: 40%;
+$w-60: 60%;
+$w-70: 70%;
+$w-80: 80%;
+$w-90: 90%;
+
+// Border radius //
+$br-7: 7px;
+$br-10: 10px;
+
+// Colors // 
+// white
+$white: #FAFAFA;
+$ghost-white: ghostwhite;
+
+// grey
+$light-grey: #ddd;
+$lighter-grey: #eee;
+$dim-light-grey: #ccc;
+$grey: grey;
+
+// blue
+$primary: rgb(45, 45, 221);
+
+// rgba(s) - opacity colors
+$opacity-black-3: rgba(0,0,0,.3);
+
+
