--- a/src/views/index.html
+++ b/src/views/index.html
@@ -9,7 +9,9 @@
 <body>
 
 	<div class="container">
-		Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda, numquam amet obcaecati veniam distinctio itaque. Eveniet debitis iste distinctio ipsum numquam at, quia facilis beatae illo laudantium. Saepe quo illo error aperiam deserunt deleniti, nam beatae, magnam perspiciatis animi, blanditiis eaque sit labore quas itaque porro corporis? Voluptatem unde commodi itaque dignissimos, doloremque excepturi reiciendis beatae vel eum, fugit est repellat quaerat earum, fugiat quam consequatur voluptates? Asperiores reprehenderit cupiditate incidunt voluptate harum amet ut nobis earum eligendi dolor, sequi culpa excepturi pariatur iusto est qui a repellat consequatur eum illum totam. Doloremque, odio. Rem atque dolor adipisci quidem distinctio reprehenderit. Labore molestias nesciunt tenetur laudantium rem atque, suscipit fugit excepturi tempora voluptas dicta commodi magni enim fugiat ipsa repellendus. Laudantium unde laborum magni eum. Corporis obcaecati eligendi ipsam ea, rem tenetur sint fugit ipsum dolores laboriosam aliquid perspiciatis eaque et quidem qui doloremque nobis odit sed ratione a quos!
+		<div class="todo-card">
+			Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque blanditiis labore voluptas neque totam cum alias dolore, ducimus numquam facilis eius tenetur, similique, quod laborum reiciendis rerum sapiente libero. Illo at itaque autem quis facilis voluptas quaerat. Ullam id facere eos magnam tenetur alias voluptatum quaerat et eaque. Provident, saepe.
+		</div>
 	</div>
 
 </body>
