Installed bootstrap-icons & Created and decorated input, add button and few scss variables

--- a/src/sass/components/_variables.scss
+++ b/src/sass/components/_variables.scss
@@ -7,6 +7,24 @@ $p-7: 7px;
 $p-10: 10px;
 $p-15: 15px;
 
+// Margin 1-10 //
+$m-1: 1px;
+$m-2: 2px;
+$m-3: 3px;
+$m-4: 4px;
+$m-5: 5px;
+$m-6: 6px;
+$m-7: 7px;
+$m-8: 8px;
+$m-9: 9px;
+$m-10: 10px;
+
+// Margin +25
+$m-25: 25px;
+$m-50: 50px;
+$m-75: 75px;
+$m-100: 100px;
+
 // Widths
 $w-25: 25%;
 $w-50: 50%;  
@@ -23,6 +41,12 @@ $w-80: 80%;
 $w-90: 90%;
 
 // Border radius //
+$br-1: 1px;
+$br-2: 2px;
+$br-3: 3px;
+$br-4: 4px;
+$br-5: 5px;
+$br-6: 6px;
 $br-7: 7px;
 $br-10: 10px;
 
@@ -36,6 +60,19 @@ $light-grey: #ddd;
 $lighter-grey: #eee;
 $dim-light-grey: #ccc;
 $grey: grey;
+
+// Strong Dark to grey
+$dark-0: #000;
+$dark-1: #111;
+$dark-2: #222;
+$dark-3: #333;
+$dark-4: #444;
+$dark-5: #555;
+$dark-6: #666;
+$dark-7: #777;
+$dark-8: #888;
+$dark-9: #999;
+
 
 // blue
 $primary: rgb(45, 45, 221);
