--- a/src/views/index.html
+++ b/src/views/index.html
@@ -10,7 +10,14 @@
 
 	<div class="container">
 		<div class="todo-card">
-			Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque blanditiis labore voluptas neque totam cum alias dolore, ducimus numquam facilis eius tenetur, similique, quod laborum reiciendis rerum sapiente libero. Illo at itaque autem quis facilis voluptas quaerat. Ullam id facere eos magnam tenetur alias voluptatum quaerat et eaque. Provident, saepe.
+			<header class="todo-header-input">
+				<div class="input-field">
+					<input type="text" class="task-input" placeholder="Create task" autofocus>
+					<button type="button" class="add-task">
+						<span class="bi bi-plus-circle-fill"></span>
+					</button>
+				</div>
+			</header>
 		</div>
 	</div>
 
