--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
+@import url('../../node_modules/bootstrap-icons/font/bootstrap-icons.css');
 @import './components/_reset';
 @import './components/_variables';
 
@@ -14,11 +15,42 @@ body {
 }
 
 .container .todo-card {
-	width: $w-60;
+	width: $w-50;
 	box-sizing: border-box;
 	margin: 100px auto 20px auto;
 	padding: $p-10;
 	background-color: $lighter-grey;
 	border-radius: $br-7;
 	box-shadow: 0 1px 2px $opacity-black-3;
+}
+
+header.todo-header-input {
+	width: $w-100;
+	padding: $p-15 0;
+	margin-bottom: $m-25;
+}
+
+.input-field input {
+	width: $w-90;
+	height: 100%;
+	padding: $p-5 0;
+	font-size: 20px;
+	border: none;
+	border-radius: $br-4;
+}
+
+.input-field input:focus {
+	border: none;
+	outline: none;
+}
+
+.input-field button {
+	transform: translateY(4px);
+	background-color: transparent;
+	border: none;
+}
+
+.input-field button span {
+	font-size: 35px;
+	cursor: pointer;
 }
