--- a/src/views/index.html
+++ b/src/views/index.html
@@ -18,6 +18,13 @@
 					</button>
 				</div>
 			</header>
+
+			<div class="todo-navigation">
+				<span class="all active" id="all">All tasks</span>
+				<span class="pending" id="pending">Pending</span>
+				<span class="completed" id="completed">Completed</span>
+			</div>
+
 		</div>
 	</div>
 
