--- a/src/views/index.html
+++ b/src/views/index.html
@@ -24,6 +24,42 @@
 				<span class="pending" id="pending">Pending</span>
 				<span class="completed" id="completed">Completed</span>
 			</div>
+			
+			<ul class="tasks">
+				<li class="task-item">
+					<label for="task-1">
+						<input type="checkbox" class="task-check" id="task-1">
+						<span class="task complete">This is a first task</span>
+					</label>
+					<span class="task-more bi bi-three-dots"></span>
+				</li>
+				<li class="task-item">
+					<label for="task-2">
+						<input type="checkbox" class="task-check" id="task-2">
+						<span class="task">This is a second task</span>
+					</label>
+					<span class="task-more bi bi-three-dots"></span>
+
+					<div class="pop-up-more">
+						<p><span  class="bi bi-pencil-square"> Edit</span></p>
+						<p><span class="bi bi-trash-fill"> Delete</span></p>
+					</div>
+
+				</li>		
+				<li class="task-item">
+					<label for="task-3">
+						<input type="checkbox" class="task-check" id="task-3">
+						<span class="task">This is a third task</span>
+					</label>
+					<span class="task-more bi bi-three-dots"></span>
+
+					<div class="pop-up-more">
+						<p><span  class="bi bi-pencil-square"> Edit</span></p>
+						<p><span class="bi bi-trash-fill"> Delete</span></p>
+					</div>
+
+				</li>						
+			</ul>
 
 		</div>
 	</div>
